[package]
name = "ssb-rpc"
version = "0.3.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "The remote procedure calls used by ssb."
repository = "https://github.com/ssbc/ssb-rpc-rs"
readme = "README.md"
license = "AGPL-3.0"

[features]
default = ["ssb"]
ssb = [] # Core rpcs from https://github.com/ssbc/scuttlebot/blob/master/api.md

[dependencies]
ssb-common = "0.3.0"
muxrpc = "0.2.0"
serde = "1.0.27"
serde_derive = "1.0.27"

[dev-dependencies]
futures = "0.1.17"
sodiumoxide = "0.0.16"
secret_stream = "0.2.0"
ssb-keyfile = "0.1.2"
serde_json = "1.0.9"
tokio = "0.1.1"
tokio-io = "0.1.5"
box_stream = "0.4.0"
